--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -5,7 +5,7 @@ spring:
     driver-class-name: org.h2.Driver
     username: sa
     password: sa
-    url:
+    url: jdbc:h2:tcp://localhost/~/account_test
   jpa:
     hibernate:
       ddl-auto: update
