--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -2,11 +2,13 @@ spring:
   application:
     name: restAPI
   datasource:
-    driver-class-name: org.h2.Driver
-    username: sa
-    password: sa
-    url: jdbc:h2:tcp://localhost/~/account_test
+    driver-class-name: org.postgresql.Driver
+    url: ${JDBC_DATABASE_URL}
+    username: ${JDBC_DATABASE_USERNAME}
+    password: ${JDBC_DATABASE_PASSWORD}
   jpa:
     hibernate:
       ddl-auto: update
     show-sql: true
+server:
+  port: 8080
