--- a/build.gradle
+++ b/build.gradle
@@ -19,24 +19,29 @@ configurations {
 	}
 }
 
-
 repositories {
 	mavenCentral()
 }
 
 dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
-	implementation 'org.springframework.boot:spring-boot-starter-jdbc'
-	implementation 'org.springframework.boot:spring-boot-starter-web'
-	compileOnly 'org.projectlombok:lombok'
-	runtimeOnly 'com.h2database:h2'
-	implementation group: 'org.postgresql', name: 'postgresql', version: '42.7.3'
-	implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.6.0'
 	implementation 'org.springframework.boot:spring-boot-starter-thymeleaf'
+	implementation 'org.springframework.boot:spring-boot-starter-web'
+	// https://mvnrepository.com/artifact/org.springframework.boot/spring-boot-starter-jdbc
+	implementation group: 'org.springframework.boot', name: 'spring-boot-starter-jdbc', version: '3.3.2'
+	// https://mvnrepository.com/artifact/org.springframework.data/spring-data-jdbc
+	implementation group: 'org.springframework.data', name: 'spring-data-jdbc', version: '3.3.2'
+	implementation group: 'org.postgresql', name: 'postgresql', version: '42.7.3'
 
+
+	compileOnly 'org.projectlombok:lombok'
+	runtimeOnly 'org.postgresql:postgresql'
 	annotationProcessor 'org.projectlombok:lombok'
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
 	testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
+	implementation group: 'mysql', name: 'mysql-connector-java', version: '8.0.28'
+
+
 }
 
 tasks.named('test') {
