--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -15,6 +15,10 @@ spring:
     prefix: classpath:/templates/
     suffix: .html
     mode: HTML
-    encoding: utf-8
+    encoding: UTF-8
 server:
   port: 8080
+
+
+
+
